<?xml version="1.0"?>
<package format="2">
  <name>ardrone</name>
  <version>0.0.1</version>
  <description>ROS driver for the Parrot AR.Drone 2.0 quadrotor</description>

  <maintainer email="fkmclane@gmail.com">Foster McLane</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
</package>
